@@ -7,6 +7,7 @@ SVN from 0.62:
         - Added predigen and postdigen commands (see ticket #49).
         - Made `dsss install` install rebuild's man page as well as DSSS' (see
           ticket #47).
+        - Rebuild: Added -gui flag (see ticket #50).
 
 0.62 from 0.61:
         - Added man page for DSSS.
